--- a/.gitignore
+++ b/.gitignore
@@ -48,8 +48,16 @@ Thumbs.db
 logs/*.log
 *.lock
 .pieces/
+.clipboard-to-pieces/
 temp/
 tmp/
+
+# Environment files
+.env
+.env.local
+.env.development
+.env.test
+.env.production
 
 # Windows
 desktop.ini
