Implement OCR capabilities and security filtering for clipboard service
- Add OCR functionality to extract text from screenshots using Tesseract.
- Introduce security filtering to detect sensitive information in both text and OCR-extracted content.
- Update README.md to reflect new features and installation instructions for Tesseract.
- Enhance setup.bat to check for Tesseract installation and provide guidance for manual installation if necessary.
- Modify security_config.json to include OCR settings and defaults.
- Update robust_clipboard_service.py to integrate OCR processing and security filtering in clipboard content handling.

These enhancements improve the clipboard service's ability to manage sensitive data effectively while providing users with clear setup instructions.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,11 @@ pyperclip>=1.8.2
 Pillow>=10.0.0
 pywin32>=306
 watchdog>=3.0.0
+
+# OCR Dependencies (Tesseract only for privacy)
+pytesseract>=0.3.10
+
+# Note: Tesseract OCR engine must be installed separately:
+# Windows: Download from https://github.com/UB-Mannheim/tesseract/wiki
+# macOS: brew install tesseract
+# Linux: sudo apt install tesseract-ocr (Ubuntu/Debian)
