Add modular clipboard service implementation
- Add clipboard_detector.py: Windows clipboard monitoring with duplicate detection
- Add image_processor.py: Image compression and DIB to BMP conversion
- Add pieces_client.py: Pieces.app SDK integration with fallback backup system
- Add clipboard_service.py: Main service coordinator with Windows file locking
- Update requirements.txt: Add all necessary dependencies
- Update setup.bat: Windows setup script
- Add start_service.bat: Service launcher

This modular implementation provides:
- Better Windows compatibility with msvcrt file locking
- Proper Pieces SDK integration with correct import paths
- Comprehensive error handling and backup systems
- Clean separation of concerns
- Production-ready service architecture

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,8 @@
-# Clipboard to Pieces Dependencies
-pieces-os-client>=0.0.1
-pyperclip>=1.8.2
+# Core dependencies
+pyperclip>=1.11.0
 Pillow>=10.0.0
+pieces-os-client>=4.4.1
 pywin32>=306
-watchdog>=3.0.0
 
-# OCR Dependencies (Tesseract only for privacy)
+# Optional for advanced features
 pytesseract>=0.3.10
-
-# Note: Tesseract OCR engine must be installed separately:
-# Windows: Download from https://github.com/UB-Mannheim/tesseract/wiki
-# macOS: brew install tesseract
-# Linux: sudo apt install tesseract-ocr (Ubuntu/Debian)
